--- a/Typescript + sass + nunjucks + browsersync/src/sass/0_tools/_mixins.sass
+++ b/Typescript + sass + nunjucks + browsersync/src/sass/0_tools/_mixins.sass
@@ -23,3 +23,7 @@
 =parent-modifier($selector)
   #{$selector} &
     @content
+
+=breakpoint($point, $type: 'max-width', $unit: 'px')
+  @media ($type: $point + $unit)
+    @content
