Add favicon generator & minor changes

--- a/Babel + sass + nunjucks + browsersync/src/html/_includes/_header.html
+++ b/Babel + sass + nunjucks + browsersync/src/html/_includes/_header.html
@@ -1,3 +1,6 @@
+{#
 {% import "partials/_mixins.html" as mixins %}
 
-{{mixins.iconSvg('iconName.icon', 'cssModName')}}
+{{mixins.iconSvg('iconName', 'cssModName')}}
+{{mixins.iconPng('iconName')}}
+#}
