--- a/Babel + sass + nunjucks + browsersync/src/html/templates/_layout.html
+++ b/Babel + sass + nunjucks + browsersync/src/html/templates/_layout.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Title</title>
   <link rel="stylesheet" media="all" href="css/style.css">
+  {% include "generated/favicon.html" ignore missing %}
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </head>
 
